favicon and layout issue

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body::after {
     margin: 0 auto;
     position: relative;
     padding-top: 7vh;
-    padding-left: 50vw;
+    padding-left: 12vw;
 }
 
 .hero-text {
